[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "octavia"
description = "Octavia is an open source, operator-scale load balancing solution designed to work with OpenStack."
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "Apache-2.0"}
dynamic = ["version", "dependencies"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: OpenStack",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://docs.openstack.org/octavia/latest/"
Documentation = "https://docs.openstack.org/octavia/latest/"
Issues = "https://bugs.launchpad.net/octavia"
Source = "https://opendev.org/openstack/octavia"
GitHub = "https://github.com/openstack/octavia"
"Release Notes" = "http://docs.openstack.org/releasenotes/octavia/"

[project.optional-dependencies]
redis = ["redis>=3.4.0"]
zookeeper = ["kazoo>=2.6.0"]
etcd = ["etcd3gw>=2.4.1"]

[project.scripts]
octavia-api = "octavia.cmd.api:main"
octavia-worker = "octavia.cmd.octavia_worker:main"
octavia-health-manager = "octavia.cmd.health_manager:main"
octavia-housekeeping = "octavia.cmd.house_keeping:main"
octavia-db-manage = "octavia.db.migration.cli:main"
octavia-driver-agent = "octavia.cmd.driver_agent:main"
amphora-agent = "octavia.cmd.agent:main"
haproxy-vrrp-check = "octavia.cmd.haproxy_vrrp_check:main"
octavia-status = "octavia.cmd.status:main"
amphora-health-checker = "octavia.cmd.health_checker:main"
amphora-interface = "octavia.cmd.interface:main"
prometheus-proxy = "octavia.cmd.prometheus_proxy:main"

[project.entry-points."octavia.amphora.drivers"]
amphora_noop_driver = "octavia.amphorae.drivers.noop_driver.driver:NoopAmphoraLoadBalancerDriver"
amphora_haproxy_rest_driver = "octavia.amphorae.drivers.haproxy.rest_api_driver:HaproxyAmphoraLoadBalancerDriver"

[project.entry-points."octavia.amphora.udp_api_server"]
keepalived_lvs = "octavia.amphorae.backends.agent.api_server.keepalivedlvs:KeepalivedLvs"

[project.entry-points."octavia.api.drivers"]
noop_driver = "octavia.api.drivers.noop_driver.driver:NoopProviderDriver"
noop_driver-alt = "octavia.api.drivers.noop_driver.driver:NoopProviderDriver"
amphora = "octavia.api.drivers.amphora_driver.v2.driver:AmphoraProviderDriver"
amphorav2 = "octavia.api.drivers.amphora_driver.v2.driver:AmphoraProviderDriver"
# octavia is an alias for backward compatibility
octavia = "octavia.api.drivers.amphora_driver.v2.driver:AmphoraProviderDriver"

[project.entry-points."octavia.barbican_auth"]
barbican_acl_auth = "octavia.certificates.common.auth.barbican_acl:BarbicanACLAuth"

[project.entry-points."octavia.cert_generator"]
local_cert_generator = "octavia.certificates.generator.local:LocalCertGenerator"

[project.entry-points."octavia.cert_manager"]
local_cert_manager = "octavia.certificates.manager.local:LocalCertManager"
barbican_cert_manager = "octavia.certificates.manager.barbican:BarbicanCertManager"
castellan_cert_manager = "octavia.certificates.manager.castellan_mgr:CastellanCertManager"
noop_cert_manager = "octavia.certificates.manager.noop:NoopCertManager"

[project.entry-points."octavia.compute.drivers"]
compute_noop_driver = "octavia.compute.drivers.noop_driver.driver:NoopComputeDriver"
compute_nova_driver = "octavia.compute.drivers.nova_driver:VirtualMachineManager"

[project.entry-points."octavia.distributor.drivers"]
distributor_noop_driver = "octavia.distributor.drivers.noop_driver.driver:NoopDistributorDriver"

[project.entry-points."octavia.driver_agent.provider_agents"]
noop_agent = "octavia.api.drivers.noop_driver.agent:noop_provider_agent"

[project.entry-points."octavia.image.drivers"]
image_noop_driver = "octavia.image.drivers.noop_driver.driver:NoopImageDriver"
image_glance_driver = "octavia.image.drivers.glance_driver:ImageManager"

[project.entry-points."octavia.network.drivers"]
network_noop_driver = "octavia.network.drivers.noop_driver.driver:NoopNetworkDriver"
allowed_address_pairs_driver = "octavia.network.drivers.neutron.allowed_address_pairs:AllowedAddressPairsDriver"

[project.entry-points."octavia.plugins"]
hot_plug_plugin = "octavia.controller.worker.v2.controller_worker:ControllerWorker"

[project.entry-points."octavia.statistics.drivers"]
stats_logger = "octavia.statistics.drivers.logger:StatsLogger"
stats_db = "octavia.statistics.drivers.update_db:StatsUpdateDb"

[project.entry-points."octavia.volume.drivers"]
volume_noop_driver = "octavia.volume.drivers.noop_driver.driver:NoopVolumeDriver"
volume_cinder_driver = "octavia.volume.drivers.cinder_driver:VolumeManager"

[project.entry-points."octavia.worker.jobboard_driver"]
redis_taskflow_driver = "octavia.controller.worker.v2.taskflow_jobboard_driver:RedisTaskFlowDriver"
zookeeper_taskflow_driver = "octavia.controller.worker.v2.taskflow_jobboard_driver:ZookeeperTaskFlowDriver"
etcd_taskflow_driver = "octavia.controller.worker.v2.taskflow_jobboard_driver:EtcdTaskFlowDriver"

[project.entry-points."oslo.config.opts"]
octavia = "octavia.opts:list_opts"

[project.entry-points."oslo.config.opts.defaults"]
octavia = "octavia.common.config:set_lib_defaults"

[project.entry-points."oslo.middleware.healthcheck"]
octavia_db_check = "octavia.api.healthcheck.healthcheck_plugins:OctaviaDBHealthcheck"

[project.entry-points."oslo.policy.policies"]
octavia = "octavia.policies:list_rules"

[project.entry-points."oslo.policy.enforcer"]
octavia = "octavia.common.policy:get_no_context_enforcer"

[tool.setuptools]
packages = [
    "octavia"
]

[tool.setuptools.data-files]
"share/octavia" = [
    "LICENSE",
    "README.rst",
]
"share/octavia/diskimage-create" = [
    "diskimage-create/diskimage-create.sh",
    "diskimage-create/image-tests.sh",
    "diskimage-create/README.rst",
    "diskimage-create/requirements.txt",
    "diskimage-create/test-requirements.txt",
    "diskimage-create/tox.ini",
    "diskimage-create/version.txt",
]
