[metadata]
name = octavia
summary = OpenStack Octavia Scalable Load Balancer as a Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[files]
packages =
    octavia
data_files =
    etc/octavia =
        etc/octavia.conf

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1

[entry_points]
console_scripts =
    octavia-api = octavia.cmd.api:main
    octavia-worker = octavia.cmd.octavia_worker:main
    octavia-health-manager = octavia.cmd.health_manager:main
    octavia-housekeeping = octavia.cmd.house_keeping:main
    amphora-agent = octavia.cmd.agent:main
    haproxy-vrrp-check = octavia.cmd.haproxy_vrrp_check:main
octavia.api.handlers =
    simulated_handler = octavia.api.v1.handlers.controller_simulator.handler:SimulatedControllerHandler
    queue_producer = octavia.api.v1.handlers.queue.producer:ProducerHandler
octavia.amphora.drivers =
    amphora_noop_driver = octavia.amphorae.drivers.noop_driver.driver:NoopAmphoraLoadBalancerDriver
    amphora_haproxy_rest_driver = octavia.amphorae.drivers.haproxy.rest_api_driver:HaproxyAmphoraLoadBalancerDriver
    amphora_haproxy_ssh_driver = octavia.amphorae.drivers.haproxy.ssh_driver:HaproxyManager
octavia.controller.queues =
    noop_event_streamer = octavia.controller.queue.event_queue:EventStreamerNoop
    queue_event_streamer = octavia.controller.queue.event_queue:EventStreamerNeutron
octavia.compute.drivers =
    compute_noop_driver = octavia.compute.drivers.noop_driver.driver:NoopComputeDriver
    compute_nova_driver = octavia.compute.drivers.nova_driver:VirtualMachineManager
octavia.network.drivers =
    network_noop_driver = octavia.network.drivers.noop_driver.driver:NoopNetworkDriver
    allowed_address_pairs_driver = octavia.network.drivers.neutron.allowed_address_pairs:AllowedAddressPairsDriver
    containers_driver = octavia.network.drivers.neutron.containers:ContainersDriver
octavia.cert_generator =
    local_cert_generator = octavia.certificates.generator.local:LocalCertGenerator
    barbican_cert_generator = octavia.certificates.generator.barbican:BarbicanCertGenerator
    anchor_cert_generator = octavia.certificates.generator.anchor:AnchorCertGenerator
octavia.cert_manager =
    local_cert_manager = octavia.certificates.manager.local:LocalCertManager
    barbican_cert_manager = octavia.certificates.manager.barbican:BarbicanCertManager
octavia.barbican_auth =
    barbican_acl_auth = octavia.certificates.common.auth.barbican_acl:BarbicanACLAuth
octavia.plugins =
    hot_plug_plugin = octavia.controller.worker.controller_worker:ControllerWorker
oslo.config.opts =
    octavia = octavia.opts:list_opts
